--- a/redis-pro.xcodeproj/xcshareddata/xcschemes/redis-pro.xcscheme
+++ b/redis-pro.xcodeproj/xcshareddata/xcschemes/redis-pro.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "4340E2B92666236200F51F19"
+               BuildableName = "redisProTests.xctest"
+               BlueprintName = "redisProTests"
+               ReferencedContainer = "container:redis-pro.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
