--- a/redis-pro.xcodeproj/xcshareddata/xcschemes/redis-pro.xcscheme
+++ b/redis-pro.xcodeproj/xcshareddata/xcschemes/redis-pro.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "4320AAEF25B6740900A8E214"
-               BuildableName = "redis-pro.app"
+               BuildableName = "redis_pro.app"
                BlueprintName = "redis-pro"
                ReferencedContainer = "container:redis-pro.xcodeproj">
             </BuildableReference>
@@ -37,6 +37,11 @@
                BlueprintName = "redisProTests"
                ReferencedContainer = "container:redis-pro.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "redisProTests">
+               </Test>
+            </SkippedTests>
          </TestableReference>
          <TestableReference
             skipped = "NO">
@@ -75,7 +80,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "4320AAEF25B6740900A8E214"
-            BuildableName = "redis-pro.app"
+            BuildableName = "redis_pro.app"
             BlueprintName = "redis-pro"
             ReferencedContainer = "container:redis-pro.xcodeproj">
          </BuildableReference>
@@ -92,7 +97,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "4320AAEF25B6740900A8E214"
-            BuildableName = "redis-pro.app"
+            BuildableName = "redis_pro.app"
             BlueprintName = "redis-pro"
             ReferencedContainer = "container:redis-pro.xcodeproj">
          </BuildableReference>
