--- a/redis-pro.xcodeproj/xcshareddata/xcschemes/redis-pro.xcscheme
+++ b/redis-pro.xcodeproj/xcshareddata/xcschemes/redis-pro.xcscheme
@@ -47,19 +47,20 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "CE0290D2278707280058442B"
-               BuildableName = "redis-proTests.xctest"
-               BlueprintName = "redis-proTests"
+               BlueprintIdentifier = "4301C85826BBEB5000C08E19"
+               BuildableName = "redisProUnitTests.xctest"
+               BlueprintName = "redisProUnitTests"
                ReferencedContainer = "container:redis-pro.xcodeproj">
             </BuildableReference>
          </TestableReference>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            parallelizable = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "4301C85826BBEB5000C08E19"
-               BuildableName = "redisProUnitTests.xctest"
-               BlueprintName = "redisProUnitTests"
+               BlueprintIdentifier = "62BDAB2A293B040C00ADA406"
+               BuildableName = "Tests.xctest"
+               BlueprintName = "Tests"
                ReferencedContainer = "container:redis-pro.xcodeproj">
             </BuildableReference>
          </TestableReference>
